fix: change lib version

--- a/gradle.properties
+++ b/gradle.properties
@@ -27,7 +27,7 @@ maven_group=dev.ftb.mods
 curseforge_id=693963
 
 #Deps
-ftb_library_version=2101.1.26-SNAPSHOT
+ftb_library_version=2101.1.26
 ftb_chunks_version=2101.1.13
 
 jei_enabled=common,neoforge
