--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ maven_group=dev.ftb.mods
 forge_version=47.2.0
 loader_version_range=[47.0,48.0)
 
-ftb_library_version=2001.2.10
+ftb_library_version=2001.2.11-SNAPSHOT
 
 curseforge_id=693963
 
