--- a/gradle.properties
+++ b/gradle.properties
@@ -27,8 +27,9 @@ maven_group=dev.ftb.mods
 curseforge_id=693963
 
 #Deps
-ftb_library_version=2101.1.26
+ftb_library_version=2101.1.29
 ftb_chunks_version=2101.1.13
+ftb_teams_version=2101.1.8
 
 jei_enabled=common,neoforge
 jei_version=19.18.3.204
